@@ -1,0 +1,12 @@
+<?php
+return array( 'title' => 'Feed title',
+              'link'  => array( 'Feed link' ),
+              'description' => 'Feed description',
+			  'item' => array( array( 'title' => 'Item title',
+                                      'link' => 'Item link',
+                                      'description' => 'Item description',
+                                      'enclosure' => array( 'url' => 'Enclosure url',
+                                                            'length' => 1200,
+                                                            'type' => 'Enclosure type' ) ), ),
+            );
+?>
