@@ -1,0 +1,18 @@
+<?php
+return array( 'title' => 'Feed title',
+              'link'  => array( 'Feed link' ),
+              'description' => 'Feed description',
+			  'item' => array( array( 'title' => 'Item title 1',
+                                      'link' => 'Item link 1',
+                                      'description' => 'Item description 1',
+                                      'enclosure' => array( 'url' => 'Enclosure url 1',
+                                                            'length' => 1200,
+                                                            'type' => 'Enclosure type 1' ) ),
+                               array( 'title' => 'Item title 2',
+                                      'link' => 'Item link 2',
+                                      'description' => 'Item description 2',
+                                      'enclosure' => array( 'url' => 'Enclosure url 2',
+                                                            'length' => 2400,
+                                                            'type' => 'Enclosure type 2' ) ), ),
+            );
+?>
