@@ -1,0 +1,23 @@
+<?xml version="1.0" encoding="utf-8"?>
+<rss version="2.0">
+  <channel>
+    <title>Feed title</title>
+    <link>Feed link</link>
+    <description>Feed description</description>
+    <pubDate>XXX</pubDate>
+    <generator>eZ Components</generator>
+    <docs>http://www.rssboard.org/rss-specification</docs>
+    <item>
+      <title>Item title 1</title>
+      <link>Item link 1</link>
+      <description>Item description 1</description>
+      <enclosure url="Enclosure url 1" length="1200" type="Enclosure type 1"/>
+    </item>
+    <item>
+      <title>Item title 2</title>
+      <link>Item link 2</link>
+      <description>Item description 2</description>
+      <enclosure url="Enclosure url 2" length="2400" type="Enclosure type 2"/>
+    </item>
+  </channel>
+</rss>
