@@ -1,0 +1,31 @@
+<?php
+$feed = new ezcFeed( 'rss2' );
+$feed->title = 'Feed title';
+
+$link = $feed->add( 'link' );
+$link->set( 'Feed link' );
+
+$feed->description = 'Feed description';
+
+$item = $feed->add( 'item' );
+$item->title = 'Item title 1';
+$item->link = 'Item link 1';
+$item->description = 'Item description 1';
+
+$enclosure = $item->add( 'enclosure' );
+$enclosure->url = 'Enclosure url 1';
+$enclosure->length = 1200;
+$enclosure->type = 'Enclosure type 1';
+
+$item = $feed->add( 'item' );
+$item->title = 'Item title 2';
+$item->link = 'Item link 2';
+$item->description = 'Item description 2';
+
+$enclosure = $item->add( 'enclosure' );
+$enclosure->url = 'Enclosure url 2';
+$enclosure->length = 2400;
+$enclosure->type = 'Enclosure type 2';
+
+return $feed;
+?>
