@@ -12,6 +12,8 @@
 - Added regression tests based on the ones from Template.
 - Added ezcFeedSchema to define different feed types.
 - Added ezcFeedElement instead of ezcFeedItem.
+- Added support for RSS2 enclosure and tutorial on how to use it for creating
+  and parsing podcasts.
 
 
 1.0beta1 - Monday 18 December 2006
